--- a/config/xp/base.yaml
+++ b/config/xp/base.yaml
@@ -1,7 +1,8 @@
 # @package _global_
 
 paths:
-    natl_gf_5nads: data/natl_gf_w_5nadirs.nc
+    GT: data/GT_FrMedCoast_log10_2019_2020_2021_.nc
+    patch: data/Obs_patch50_FrMedCoast_log10_2019_2020_2021_.nc
 
 trainer:
   _target_: pytorch_lightning.Trainer
@@ -26,15 +27,16 @@ trainer:
 datamodule:
   _target_: src.data.BaseDataModule
   input_da: 
-    _target_: src.utils.load_altimetry_data
-    path: ${paths.natl_gf_5nads}
+    _target_: src.utils.load.kd490_data
+    path1: ${paths.GT}
+    path2: ${paths.patch}
   domains:
     train:
-      time: {_target_: builtins.slice, _args_: ['2013-02-24', '2013-09-30']}
+      time: {_target_: builtins.slice, _args_: ['2019-01-01', '2019-10-10']}
     val: 
-      time: {_target_: builtins.slice, _args_: ['2012-12-15', '2013-02-24']}
+      time: {_target_: builtins.slice, _args_: ['2020-02-04', '2020-03-31']}
     test: 
-      time: {_target_: builtins.slice,  _args_: ['2012-10-01', '2012-12-20']}
+      time: {_target_: builtins.slice,  _args_: ['2021-02-09', '2021-06-30']}
   xrds_kw:
     patch_dims: { time: 15, lat: 240, lon: 240}
     strides: { time: 1, lat: 240, lon: 240}
