--- a/config/xp/base.yaml
+++ b/config/xp/base.yaml
@@ -63,7 +63,7 @@ model:
       _target_: src.models.BilinAEPriorCost
       dim_in: ${datamodule.xrds_kw.patch_dims.time}
       dim_hidden: 32
-      downsamp: 2
+      downsamp: None
     obs_cost: 
       _target_: src.models.BaseObsCost
     grad_mod: 
