--- a/config/xp/base.yaml
+++ b/config/xp/base.yaml
@@ -19,7 +19,7 @@ trainer:
     version: ''
   max_epochs: 150
   callbacks:
-    - _target_: src.versioning_cb.VersioningCallback
+    #- _target_: src.versioning_cb.VersioningCallback
     - _target_: pytorch_lightning.callbacks.LearningRateMonitor
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
       monitor: val_mse
