--- a/config/xp/base.yaml
+++ b/config/xp/base.yaml
@@ -97,7 +97,7 @@ metrics:
 entrypoints:
   - _target_: pytorch_lightning.seed_everything
     seed: 333
-  - _target_: src.train.base_training
+  - _target_: src.train.multi_dm_training
     trainer: ${trainer}
     lit_mod: ${model}
     dm: ${datamodule}
