--- a/config/params/multimodal_wave.yaml
+++ b/config/params/multimodal_wave.yaml
@@ -2,11 +2,11 @@
 
 ## Specific components
 sst_da: 
-  _target_: contrib.multimodal.load_data_with_sst
+  _target_: contrib.multimodal.load_data_with_wave
   obs_var: five_nadirs
 
 obs_cost:
-  _target_: contrib.multimodal.MultiModalObsCost
+  _target_: contrib.multimodal_wave.MultiModalObsCost
   dim_in: ${datamodule.xrds_kw.patch_dims.time}
   dim_hidden: 5
 
