--- a/config/xp/base_multi_opt.yaml
+++ b/config/xp/base_multi_opt.yaml
@@ -2,7 +2,7 @@
 
 paths:
   GT: /DATASET/turbidity_kd/GT_FrMedCoast_log10_2019_2020_2021_.nc
-  patch: /DATASET/turbidity_kd/Obs_patch50_FrMedCoast_log10_2019_2020_2021_.nc
+  patch: /DATASET/turbidity_kd/Obs_patch50_FrMedCoast_log10_2019_2020_2021_.nc 
 
 
 trainer:
@@ -41,7 +41,7 @@ datamodule:
   xrds_kw:
     patch_dims: { time: 15, lat: 240, lon: 240}
     strides: { time: 1, lat: 240, lon: 240}
-    #domain_limits: ${domain.train}
+    domain_limits: ${domain.train}
   dl_kw: {batch_size: 4, num_workers: 1}
   aug_kw:
     aug_factor: 2
@@ -75,13 +75,50 @@ model:
       _target_: src.models.ConvLstmGradModel
       dim_in: ${datamodule.xrds_kw.patch_dims.time}
       dim_hidden: 48
+  test_metrics: ${metrics.test_metrics}
+  pre_metric_fn: 
+        _target_: xarray.Dataset.sel
+        _partial_: True
+        time: ${datamodule.domains.test.time}
+
+
+metrics:
+  nrmse_scores: {_target_: src.utils.rmse_based_scores_from_ds, _partial_: True}
+  psd_scores: {_target_: src.utils.psd_based_scores_from_ds, _partial_: True}
+  get0: {_target_: operator.itemgetter, _args_: [0]}
+  get1: {_target_: operator.itemgetter, _args_: [1]}
+  test_metrics:
+    'mu': {_target_: src.utils.pipe, _partial_: true, fns: ['${metrics.nrmse_scores}', '${metrics.get0}']}
+    'sig': {_target_: src.utils.pipe, _partial_: true, fns: ['${metrics.nrmse_scores}', '${metrics.get1}']}
+    'lx': {_target_: src.utils.pipe, _partial_: true, fns: ['${metrics.psd_scores}', '${metrics.get0}']}
+    'lt': {_target_: src.utils.pipe, _partial_: true, fns: ['${metrics.psd_scores}', '${metrics.get1}']}
 
 entrypoints:
   - _target_: pytorch_lightning.seed_everything
     seed: 333
-  - _target_: src.train.base_training
+  - _target_: src.train.multi_dm_training
     trainer: ${trainer}
     lit_mod: ${model}
     dm: ${datamodule}
+    test_fn:
+      _target_: src.utils.diagnostics
+      _partial_: true
+      test_domain:
+        time: {_target_: builtins.slice, _args_: ["2021-02-09", "2021-06-30"]}
+
+
+entrypoints:
+  - _target_: pytorch_lightning.seed_everything
+    seed: 333
+  - _target_: src.train.multi_dm_training
+    trainer: ${trainer}
+    lit_mod: ${model}
+    dm: ${datamodule}
+    test_fn:
+      _target_: src.utils.diagnostics
+      _partial_: true
+      test_domain:
+        time: {_target_: builtins.slice, _args_: ["2021-02-09", "2021-06-30"]}
+
 
 
