--- a/config/params/multimodal_sst.yaml
+++ b/config/params/multimodal_sst.yaml
@@ -6,7 +6,7 @@ sst_da:
   obs_var: five_nadirs
 
 obs_cost:
-  _target_: contrib.multimodal_sst.MultiModalObsCost
+  _target_: contrib.multimodal.MultiModalObsCost
   dim_in: ${datamodule.xrds_kw.patch_dims.time}
   dim_hidden: 5
 
